--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/passport-local-mongoose": "^6.1.5",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
@@ -19,6 +20,9 @@
     "joi": "^18.0.1",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^9.0.1"
   }
 }
