--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "commonjs",
   "dependencies": {
     "@types/passport-local-mongoose": "^6.1.5",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
@@ -21,6 +23,8 @@
     "method": "^2.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^9.0.1"
