--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@types/passport-local-mongoose": "^6.1.5",
+    "axios": "^1.13.2",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^17.2.3",
@@ -20,6 +21,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "joi": "^18.0.1",
+    "locationiq": "^0.0.3",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
