--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "22.17.1"
+  },
   "name": "airbnb",
   "version": "1.0.0",
   "description": "",
@@ -15,20 +18,21 @@
     "axios": "^1.13.2",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "joi": "^18.0.1",
-    "locationiq": "^0.0.3",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
-    "multer": "^2.0.2",
+    "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^9.0.1"
+    "passport-local-mongoose": "^9.0.1",
+    "streamifier": "^0.1.1"
   }
 }
